highlight/tree-sitter/grammar.js
    source_file: $ => seq(
      repeat($.import_declaration),
      repeat($._declaration),
    ),


    import_declaration: $ => seq(
      'import', $.import_path,
      optional(choice(
        seq('as', field('alias', $.identifier)),
        seq('(', $.identifier_list, ')'),
      )),
    ),
    import_path: $ => seq($.identifier, repeat(seq('/', $.identifier))),

    _declaration: $ => choice(
      $.public_declaration,
      $.conformance_declaration,
      $.fixed_conditional,
      $.option_declaration,
      $.tool_directive,
    ),

    option_declaration: $ => seq(
      'option', field('name', $._declaration_name), ':', field('type', $._type),
      '=', field('value', $._expression),
    ),

    tool_directive: $ => seq(
      field('module', choice('compiler', 'assembler', 'linker')),
      '.', field('member', $.identifier), '(',
      optional(commaSep1($._expression)), ')',
    ),

    public_declaration: $ => seq(
      optional('public'),
      choice(
        $.atom_declaration,
        $.binding,
        $.function_declaration,
        $.extern_declaration,
        $.type_declaration,
        $.concept_declaration,
      ),
    ),

    extern_declaration: $ => seq(
      optional($.link_symbol),
      $.c_convention,
      optional($.link_symbol),
      field('name', $._declaration_name), ':', $.c_declared_signature,
      optional(seq(
        '=', optional(field('body', $.block)),
        'end', optional(field('end_name', $.identifier)),
      )),
    ),
    c_convention: $ => seq(
      'extern', '(', field('convention', alias(choice('c', 'interrupt', 'naked'), $.identifier)), ')',
    ),
    link_symbol: $ => seq(
      field('attribute', alias('link', $.identifier)), '(',
      commaSep1(choice(
        seq(field('label', choice(alias('symbol', $.identifier), alias('section', $.identifier))), ':',
            field('value', $.text_literal)),
        seq(field('label', alias(choice('align', 'vector'), $.identifier)), ':',
            field('value', $.integer_literal)),
        field('label', alias('keep', $.identifier)),
      )),
      ')',
    ),

    fixed_conditional: $ => seq(
      'fixed', 'if', field('condition', $._expression), 'then',
      repeat($._declaration),
      repeat(seq('elsif', field('condition', $._expression), 'then', repeat($._declaration))),
      optional(seq('else', repeat($._declaration))),
      'end', 'if',
    ),

    atom_declaration: $ => seq(field('name', $.identifier_list), ':', 'atom'),
    identifier_list: $ => seq($._declaration_name, repeat(seq(',', $.identifier))),
    // At a declaration start the lexer may also admit contextual import or
    // option syntax. Keep the ordinary name until the next token decides.
    _declaration_name: $ => choice(
      $.identifier,
      alias('option', $.identifier),
      alias('as', $.identifier),
      alias('link', $.identifier),
      alias('distinct', $.identifier),
    ),

    // D233: several names may share one binding, with one written type.
    binding: $ => seq(optional($.link_symbol), choice(
      seq(
        optional('mut'),
        field('name', $.identifier_list),
        ':',
        field('type', $._type),
        optional(seq('=', field('value', $._expression))),
      ),
      seq(
        optional('mut'),
        field('name', $._declaration_name),
        ':=',
        field('value', $._expression),
      ),
    )),

    _type: $ => choice(
      $.function_type,
      $.array_type,
      $.pointer_type,
      $.slice_type,
      $.any_type,
      $.type_application,
      $.scalar_type,
      $.declaration_reference,
    ),

    function_type: $ => choice(
      $.signature,
      seq($.c_convention, $.c_signature),
    ),
    array_type: $ => seq('[', field('length', $._expression), ']', field('element', $._type)),
    scalar_type: _ => choice(
      'u8', 'u16', 'u32', 'u64',
      'i8', 'i16', 'i32', 'i64',
      'usize', 'isize', 'bool', 'f32', 'f64',
    ),

    type_declaration: $ => seq(
      field('name', $._declaration_name), ':', 'type',
      choice(
        seq('=', choice($.atom_union, $.encoded_union, $.range_subtype,
                         $.distinct_body, $._type, $.struct_body)),
        seq($.type_formals, '=', choice($.atom_union, $.encoded_union,
                         $.distinct_body, $._type, $.struct_body)),
      ),
    ),
    // [0650]/[1795]: `distinct` makes a type that is not the type it names.
    struct_body: $ => seq(
      optional($.c_layout),
      choice(
        seq('struct', repeat1(choice($.field, $.variant_part)), 'end', optional($._declaration_name)),
        seq('(', commaSep1($.field), ')'),
      ),
    ),
    // Keep the existing node name for editor-query compatibility; the
    // contextual policy also admits explicit packed carrier storage.
    c_layout: $ => seq(
      field('attribute', alias('layout', $.identifier)), '(',
      field('convention', choice(alias('c', $.identifier),
                                  alias('optimal', $.identifier),
                                  alias('packed', $.identifier))),
      optional(seq(',', $.scalar_type)),
      ')',
    ),
    // D233: several field names may share one type, `at` position included.
    field: $ => seq(field('name', $.identifier_list), ':', field('type', $._type),
      optional(seq('at', $._expression,
                   optional(seq('..', $._expression))))),
    function_declaration: $ => seq(
      optional($.link_symbol),
      field('name', $._declaration_name), ':',
      $.declared_signature, '=',
      optional(field('body', $.block)),
      'end', optional(field('end_name', $.identifier)),
    ),
    c_signature: $ => seq(
      '(', optional(seq(
        $.parameters,
        optional(seq(',', $.variadic_marker)),
      )), ')', $.arrow, $.returns, optional($.errors),
    ),
    declared_signature: $ => seq(
      '(', optional($.routine_formals), ')', $.arrow, $.returns, optional($.errors),
    ),
    c_declared_signature: $ => seq(
      '(', optional(seq(
        $.routine_formals,
        optional(seq(',', $.variadic_marker)),
      )), ')', $.arrow, $.returns, optional($.errors),
    ),
    variadic_marker: _ => '...',
    routine_formals: $ => commaSep1(choice($.parameter, $.type_formal)),
    parameters: $ => commaSep1($.parameter),
    // `caller` marks D192's site parameter and is not reserved, so a
    // parameter may also be named caller.
    // D233: several parameter names may share one convention and type.
    parameter: $ => choice(
      seq('caller', field('name', $.identifier_list), ':', field('type', $._type)),
      seq(field('name', alias('caller', $.identifier)), ':', field('type', $._type)),
      seq(
        optional('escaping'),
        optional($.parameter_convention),
        field('name', $.identifier_list), ':', field('type', $._type),
      ),
    ),
    returns: $ => choice(
      seq('(', optional(commaSep1($.named_return)), ')'),
      'none',
      // D231's distinct `noreturn` return form.
      'noreturn',
    ),
    // D233: several return names may share one type; a comma reaching ':'
    // instead starts the next named return rather than extending `from`.
    named_return: $ => seq(
      field('name', $.identifier_list), ':', field('type', $._type),
      optional(seq('from', commaSep1($.identifier))),
    ),
    errors: $ => prec.right(seq(
      '!',
      choice('...', seq($.declaration_reference, repeat(seq('|', $.declaration_reference)))),
    )),

    block: $ => choice(
      repeat1($._statement),
      seq(repeat($._value_statement), field('value', $._expression)),
    ),
    // [1810]'s `value_statement`: everything that may precede a block's
    // value.  `unchecked` alone is a statement only.
    _statement: $ => prec.dynamic(3, choice(
      $._value_statement,
      $.unchecked_block,
    )),
    _value_statement: $ => prec.dynamic(5, choice(
      $.binding,
      $.destructuring_binding,
      $.assignment_statement,
      $.increment_statement,
      $.discard_statement,
      $.call_expression,
      $.labeled_application,
      $.try_expression,
      $.defer_statement,
      $.undo_statement,
      $.return_statement,
      $.fail_statement,
      $.break_statement,
      $.continue_statement,
      $.loop_statement,
      $.while_statement,
      $.for_statement,
      $.if_expression,
      $.match_expression,
      $.bare_block,
      $.labeled_block,
    )),

    // The loops, [1130]-[1190]. D225 reserves their control words
    // globally, including in every ordinary identifier position.
    for_statement: $ => choice(
      seq('for', $._traversal, 'do', optional($.block),
          optional(seq('complete', optional(field('completion', $.block)))),
          'end', 'for'),
      seq(field('label', $.identifier), ':', 'for', $._traversal, 'do', optional($.block),
          optional(seq('complete', optional(field('completion', $.block)))),
          'end', field('end_label', $.identifier)),
    ),
    _traversal: $ => seq(
      field('element', $.identifier), optional(seq(',', field('index', $.identifier))),
      'in', field('source', $._expression),
      optional(seq(field('operator', choice('..', '..<')), field('upper', $._expression))),
    ),
    break_statement: $ => prec.right(seq(
      'break',
      optional(field('label', $.identifier)),
      optional(seq('with', field('value', $._expression))),
      optional(seq('when', field('condition', $._expression))),
    )),
    assignment_statement: $ => prec.right(100, seq(
      field('left', $.place),
      field('operator', choice(
        '=', '+=', '*=', '/=', '%=', '&=', '|=', '^=', '<<=', '>>=',
        '+%=', '*%=', $.minus_equals, $.minus_percent_equals,
      )),
      field('right', $._expression),
    )),
    place: $ => $.indexed_expression,

    _expression: $ => $.logical_or_expression,
    logical_or_expression: $ => binaryLevel($, PREC.logical_or, $.logical_and_expression, ['or']),
    logical_and_expression: $ => binaryLevel($, PREC.logical_and, $.comparison_expression, ['and']),
    comparison_expression: $ => choice(
      prec.dynamic(1, $.alternation_expression),
      prec.dynamic(2, prec.left(PREC.comparison, seq(
        $.alternation_expression,
        field('operator', choice('==', '<>', '<', '<=', '>', '>=')),
        $.alternation_expression,
      ))),
    ),
    alternation_expression: $ => binaryLevel($, PREC.alternation, $.exclusion_expression, ['|']),
    exclusion_expression: $ => binaryLevel($, PREC.exclusion, $.conjunction_expression, ['^']),
    conjunction_expression: $ => binaryLevel($, PREC.conjunction, $.shift_expression, ['&']),
    shift_expression: $ => binaryLevel($, PREC.shift, $.sum_expression, ['<<', '>>']),
    sum_expression: $ => binaryLevel($, PREC.sum, $.product_expression, ['+', $.minus, '+%', $.minus_percent]),
    product_expression: $ => binaryLevel($, PREC.product, $.unary_expression, ['*', '/', '%', '*%']),
    unary_expression: $ => prec.right(PREC.unary, seq(
      repeat(field('operator', choice($.minus, '~', 'not'))),
      $._primary_expression,
    )),

    _primary_expression: $ => choice(
      $.if_expression,
      $.match_expression,
      $.bare_block,
      $.loop_statement,
      $.while_statement,
      $.for_statement,
      $.literal,
      $.array_literal,
      $.array_repetition,
      $.struct_literal,
      $.empty_slice,
      $.labeled_application,
      $.anonymous_function,
      $.call_expression,
      $.indexed_expression,
      $.address_expression,
      $.pointer_conversion,
      $.any_construction,
      $.measurement_expression,
      $.try_expression,
      seq('(', $._expression, ')'),
    ),

    literal: $ => choice(
      $.float_literal, $.integer_literal, $.boolean_literal, $.zeroed_literal,
      $.character_literal, $.text_literal, $.raw_literal,
    ),
    boolean_literal: _ => choice('true', 'false'),
    integer_literal: _ => token(choice(
      /0[xX][0-9A-Fa-f][0-9A-Fa-f_]*/,
      /0[oO][0-7][0-7_]*/,
      /0[bB][01][01_]*/,
      /[0-9][0-9_]*/,
    )),
    text_literal: _ => token(prec(1, /"([^"\\\n]|\\[^\n])*"/)),

    indexed_expression: $ => choice(
      prec.dynamic(1, choice($.identifier, $.scalar_type)),
      prec.dynamic(2, prec.left(PREC.selection, seq(
        $.indexed_expression,
        choice($.member_selection, $.index_selection),
      ))),
    ),
    declaration_reference: $ => seq(
      choice($.identifier, alias('distinct', $.identifier)), repeat($.member_selection),
    ),

    call_expression: $ => choice(
      prec(PREC.call, seq(
        field('function', $.indexed_expression), '(', optional($.arguments), ')',
      )),

      prec.dynamic(-2, prec.right(PREC.call, seq(
        field('function', $.indexed_expression), '(', optional($.arguments), ')',
        $.recovery_clause,
      ))),
    ),
    arguments: $ => seq(
      commaSep1($._expression),
      repeat(seq(',', $.assembly_operand)),
    ),
    measurement_expression: $ => choice(
      seq(choice('sizeof', 'alignof'), $._type),
      // `lenof` is contextual in the kernel: a declaration may also be named
      // lenof.  Keep the leading token an identifier and let highlight queries
      // apply an equality predicate instead of turning it into a keyword.
      seq(
        field('operator', $.identifier),
        field('value', choice($.identifier, seq('(', $.array_literal, ')'))),
      ),
    ),

    // `of` is contextual for the same reason as `lenof`: it remains a legal
    // identifier outside the few aggregate positions that give it meaning.
    identifier: _ => /[a-z][a-z0-9_]*|_[a-z0-9_]+/,
  },
});

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}

function binaryLevel($, precedence, operand, operators) {
  const operator = operators.length === 1 ? operators[0] : choice(...operators);
  return choice(
    prec.dynamic(1, operand),
    prec.dynamic(2, prec.left(precedence, seq(
      operand,
      repeat1(seq(field('operator', operator), operand)),
    ))),
  );
}
