highlight/tree-sitter/test/corpus/declarations.txt
==================
Declarations
==================

import core/io
import net/http as h
import core/sort (sort, ordered)

ready, stopped : atom
public count : u32 = 1
pair : type = struct
  left : u32
  right : u32
end pair

add : (a : u32, b : u32) -> (value : u32) =
  value = a + b
end add

---

(source_file
  (import_declaration
    (import_path
      (identifier)
      (identifier)))
  (import_declaration
    (import_path
      (identifier)
      (identifier))
    alias: (identifier))
  (import_declaration
    (import_path
      (identifier)
      (identifier))
    (identifier_list
      (identifier)
      (identifier)))
  (public_declaration
    (atom_declaration
      name: (identifier_list
        (identifier)
        (identifier))))
  (public_declaration
    (binding
      name: (identifier_list
        (identifier))
      type: (scalar_type)
      value: (logical_or_expression
        (logical_and_expression
          (comparison_expression
            (alternation_expression
              (exclusion_expression
                (conjunction_expression
                  (shift_expression
                    (sum_expression
                      (product_expression
                        (unary_expression
                          (literal
                            (integer_literal))))))))))))))
  (public_declaration
    (type_declaration
      name: (identifier)
      (struct_body
        (field
          name: (identifier_list
            (identifier))
          type: (scalar_type))
        (field
          name: (identifier_list
            (identifier))
          type: (scalar_type))
        (identifier))))
  (public_declaration
    (function_declaration
      name: (identifier)
      (declared_signature
        (routine_formals
          (parameter
            name: (identifier_list
              (identifier))
            type: (scalar_type))
          (parameter
            name: (identifier_list
              (identifier))
            type: (scalar_type)))
        (arrow)
        (returns
          (named_return
            name: (identifier_list
              (identifier))
            type: (scalar_type))))
      body: (block
        (assignment_statement
          left: (place
            (indexed_expression
              (identifier)))
          right: (logical_or_expression
            (logical_and_expression
              (comparison_expression
                (alternation_expression
                  (exclusion_expression
                    (conjunction_expression
                      (shift_expression
                        (sum_expression
                          (product_expression
                            (unary_expression
                              (indexed_expression
                                (identifier))))
                          (product_expression
                            (unary_expression
                              (indexed_expression
                                (identifier))))))))))))))
      end_name: (identifier))))

==================
Hosted tool configuration
==================

option logging: bool = true
compiler.assert(sizeof usize == 8)
fixed if logging then
    linker.library("m")
end if
as: u32 = 1
option: u32 = 2

---

(source_file
  (option_declaration
    (identifier)
    (scalar_type)
    (logical_or_expression
      (logical_and_expression
        (comparison_expression
          (alternation_expression
            (exclusion_expression
              (conjunction_expression
                (shift_expression
                  (sum_expression
                    (product_expression
                      (unary_expression
                        (literal
                          (boolean_literal)))))))))))))
  (tool_directive
    (identifier)
    (arguments
      (logical_or_expression
        (logical_and_expression
          (comparison_expression
            (alternation_expression
              (exclusion_expression
                (conjunction_expression
                  (shift_expression
                    (sum_expression
                      (product_expression
                        (unary_expression
                          (measurement_expression
                            (scalar_type)))))))))
            (alternation_expression
              (exclusion_expression
                (conjunction_expression
                  (shift_expression
                    (sum_expression
                      (product_expression
                        (unary_expression
                          (literal
                            (integer_literal))))))))))))))
  (fixed_conditional
    (logical_or_expression
      (logical_and_expression
        (comparison_expression
          (alternation_expression
            (exclusion_expression
              (conjunction_expression
                (shift_expression
                  (sum_expression
                    (product_expression
                      (unary_expression
                        (indexed_expression
                          (identifier))))))))))))
    (tool_directive
      (identifier)
      (arguments
        (logical_or_expression
          (logical_and_expression
            (comparison_expression
              (alternation_expression
                (exclusion_expression
                  (conjunction_expression
                    (shift_expression
                      (sum_expression
                        (product_expression
                          (unary_expression
                            (literal
                              (text_literal)))))))))))))))
  (public_declaration
    (binding
      (identifier_list
        (identifier))
      (scalar_type)
      (logical_or_expression
        (logical_and_expression
          (comparison_expression
            (alternation_expression
              (exclusion_expression
                (conjunction_expression
                  (shift_expression
                    (sum_expression
                      (product_expression
                        (unary_expression
                          (literal
                            (integer_literal))))))))))))))
  (public_declaration
    (binding
      (identifier_list
        (identifier))
      (scalar_type)
      (logical_or_expression
        (logical_and_expression
          (comparison_expression
            (alternation_expression
              (exclusion_expression
                (conjunction_expression
                  (shift_expression
                    (sum_expression
                      (product_expression
                        (unary_expression
                          (literal
                            (integer_literal)))))))))))))))

==================
Contextual alias word after plain import
==================

import core/text
as: u32 = 0

---

(source_file
  (import_declaration
    (import_path
      (identifier)
      (identifier)))
  (public_declaration
    (binding
      (identifier_list
        (identifier))
      (scalar_type)
      (logical_or_expression
        (logical_and_expression
          (comparison_expression
            (alternation_expression
              (exclusion_expression
                (conjunction_expression
                  (shift_expression
                    (sum_expression
                      (product_expression
                        (unary_expression
                          (literal
                            (integer_literal)))))))))))))))

==================
C boundary declarations and contextual names
==================

record : type = layout(c) struct
  value : f64
end record
callback : type = extern(c) (value : i32) -> (result : i32)
callbacks : type = [2]extern(c) (value : i32) -> (result : i32)
extern(c) link(symbol: "c_variadic") c_variadic : (format : cstring, ...) -> (status : i32)
public extern(c) landin_callback : (value : i32) -> (result : i32) =
  result = value
end landin_callback
link(symbol: "native_identity") native_identity : (value : i32) -> (result : i32) =
  result = value
end native_identity
layout : i32 = 0
c : i32 = 0
link : i32 = 0
symbol : i32 = 0

---

(source_file
  (public_declaration
    (type_declaration
      (identifier)
      (struct_body
        (c_layout
          (identifier)
          (identifier))
        (field
          (identifier_list
            (identifier))
          (scalar_type))
        (identifier))))
  (public_declaration
    (type_declaration
      (identifier)
      (function_type
        (c_convention
          (identifier))
        (c_signature
          (parameters
            (parameter
              (identifier_list
                (identifier))
              (scalar_type)))
          (arrow)
          (returns
            (named_return
              (identifier_list
                (identifier))
              (scalar_type)))))))
  (public_declaration
    (type_declaration
      (identifier)
      (array_type
        (logical_or_expression
          (logical_and_expression
            (comparison_expression
              (alternation_expression
                (exclusion_expression
                  (conjunction_expression
                    (shift_expression
                      (sum_expression
                        (product_expression
                          (unary_expression
                            (literal
                              (integer_literal))))))))))))
        (function_type
          (c_convention
            (identifier))
          (c_signature
            (parameters
              (parameter
                (identifier_list
                  (identifier))
                (scalar_type)))
            (arrow)
            (returns
              (named_return
                (identifier_list
                  (identifier))
                (scalar_type))))))))
  (public_declaration
    (extern_declaration
      (c_convention
        (identifier))
      (link_symbol
        (identifier)
        (identifier)
        (text_literal))
      (identifier)
      (c_declared_signature
        (routine_formals
          (parameter
            (identifier_list
              (identifier))
            (declaration_reference
              (identifier))))
        (variadic_marker)
        (arrow)
        (returns
          (named_return
            (identifier_list
              (identifier))
            (scalar_type))))))
  (public_declaration
    (extern_declaration
      (c_convention
        (identifier))
      (identifier)
      (c_declared_signature
        (routine_formals
          (parameter
            (identifier_list
              (identifier))
            (scalar_type)))
        (arrow)
        (returns
          (named_return
            (identifier_list
              (identifier))
            (scalar_type))))
      (block
        (assignment_statement
          (place
            (indexed_expression
              (identifier)))
          (logical_or_expression
            (logical_and_expression
              (comparison_expression
                (alternation_expression
                  (exclusion_expression
                    (conjunction_expression
                      (shift_expression
                        (sum_expression
                          (product_expression
                            (unary_expression
                              (indexed_expression
                                (identifier))))))))))))))
      (identifier)))
  (public_declaration
    (function_declaration
      (link_symbol
        (identifier)
        (identifier)
        (text_literal))
      (identifier)
      (declared_signature
        (routine_formals
          (parameter
            (identifier_list
              (identifier))
            (scalar_type)))
        (arrow)
        (returns
          (named_return
            (identifier_list
              (identifier))
            (scalar_type))))
      (block
        (assignment_statement
          (place
            (indexed_expression
              (identifier)))
          (logical_or_expression
            (logical_and_expression
              (comparison_expression
                (alternation_expression
                  (exclusion_expression
                    (conjunction_expression
                      (shift_expression
                        (sum_expression
                          (product_expression
                            (unary_expression
                              (indexed_expression
                                (identifier))))))))))))))
      (identifier)))
  (public_declaration
    (binding
      (identifier_list
        (identifier))
      (scalar_type)
      (logical_or_expression
        (logical_and_expression
          (comparison_expression
            (alternation_expression
              (exclusion_expression
                (conjunction_expression
                  (shift_expression
                    (sum_expression
                      (product_expression
                        (unary_expression
                          (literal
                            (integer_literal))))))))))))))
  (public_declaration
    (binding
      (identifier_list
        (identifier))
      (scalar_type)
      (logical_or_expression
        (logical_and_expression
          (comparison_expression
            (alternation_expression
              (exclusion_expression
                (conjunction_expression
                  (shift_expression
                    (sum_expression
                      (product_expression
                        (unary_expression
                          (literal
                            (integer_literal))))))))))))))
  (public_declaration
    (binding
      (identifier_list
        (identifier))
      (scalar_type)
      (logical_or_expression
        (logical_and_expression
          (comparison_expression
            (alternation_expression
              (exclusion_expression
                (conjunction_expression
                  (shift_expression
                    (sum_expression
                      (product_expression
                        (unary_expression
                          (literal
                            (integer_literal))))))))))))))
  (public_declaration
    (binding
      (identifier_list
        (identifier))
      (scalar_type)
      (logical_or_expression
        (logical_and_expression
          (comparison_expression
            (alternation_expression
              (exclusion_expression
                (conjunction_expression
                  (shift_expression
                    (sum_expression
                      (product_expression
                        (unary_expression
                          (literal
                            (integer_literal)))))))))))))))
