highlight/tree-sitter/test/corpus/optimal.txt
==================
Optimal layout keeps source field identities and contextual names
==================

record : type = layout(optimal) struct
  optimal : u8
  layout : u64
  c : u8
end record

---

(source_file
  (public_declaration
    (type_declaration
      (identifier)
      (struct_body
        (c_layout
          (identifier)
          (identifier))
        (field
          (identifier_list
            (identifier))
          (scalar_type))
        (field
          (identifier_list
            (identifier))
          (scalar_type))
        (field
          (identifier_list
            (identifier))
          (scalar_type))
        (identifier)))))
